--- a/ManageGo.Android/ManageGo.Android.csproj
+++ b/ManageGo.Android/ManageGo.Android.csproj
@@ -37,7 +37,7 @@
         <AndroidSupportedAbis>x86_64</AndroidSupportedAbis>
         <AndroidUseAapt2>false</AndroidUseAapt2>
 
-<RunCodeAnalysis>true</RunCodeAnalysis>    </PropertyGroup>
+</PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
         <DebugType></DebugType>
@@ -53,7 +53,7 @@
         <AndroidEnableMultiDex>true</AndroidEnableMultiDex>
         <AndroidLinkMode>SdkOnly</AndroidLinkMode>
 
-<RunCodeAnalysis>true</RunCodeAnalysis>    </PropertyGroup>
+</PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Xamarin.Android.Support.Design" Version="28.0.0.1" />
